fix: parse embedded metadata for client libraries
